--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -11,6 +11,7 @@ block content
 		include ../sections/_steps
 		include ../sections/_feedback
 		include ../sections/_review-section
+		include ../sections/_testimonial
 	
 	
 	//include ../sections/_footer
