--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,6 +20,8 @@
 @use "sections/_steps.scss";
 @use "sections/_feedback.scss";
 @use "sections/_review-section.scss";
+@use "sections/_testimonial.scss";
+
 
 
 
