--- a/src/pug/sections/_service-poppulare.pug
+++ b/src/pug/sections/_service-poppulare.pug
@@ -1,5 +1,5 @@
 //POPPULARE SERVICE
-section.poppular-service
+section.poppular-service.has-absBtn
 	.container-special
 		.header-block
 			h2.h2 Популярные услуги
