--- a/src/scss/sections/_service-poppulare.scss
+++ b/src/scss/sections/_service-poppulare.scss
@@ -86,6 +86,12 @@
 .poppular-service{
 	@media (max-width: 767px) {
 		padding-top: 18px;
+		
+	}
+}
+.has-absBtn{
+	@media (max-width: 767px) {
+		
 		.container-special{
 			padding-bottom: 134px;
 			
