--- a/src/pug/sections/_testimonial.pug
+++ b/src/pug/sections/_testimonial.pug
@@ -1,5 +1,5 @@
 //TESTIMONIAL
-section.testimonial
+section.testimonial.has-absBtn
 	.container-special
 		.header-block
 			h2.h2 Улыбки наших клиентов
@@ -67,3 +67,10 @@ section.testimonial
 								span.rating-star
 								span.rating-star.rating-star.disable
 
+			.testimonial-slider-nav.flex
+				button.arrow-prev
+					svg.svg-rarr
+						use(href='./img/sprite.svg#svg-rarr')
+				button.arrow-next
+					svg.svg-rarr
+						use(href='./img/sprite.svg#svg-rarr')
