--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -12,6 +12,7 @@ block content
 		include ../sections/_feedback
 		include ../sections/_review-section
 		include ../sections/_testimonial
+		include ../sections/_faq
 	
 	
 	//include ../sections/_footer
