--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -85,10 +85,33 @@
 .btn-play{
 	width: 44px;
 	height: 44px;
+	display: block;
 	background-image: url('../img/video/play.webp');
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
 	@media (min-width: 768px) and (max-width: 1919px) {
 		width: remy(44);
 	   height: remy(44);
+	}
+	@media (max-width: 767px) {
+	width: 36px;
+	height: 36px;
+	}
+}
+.btn-play-dark{
+	width: 80px;
+	height: 80px;
+	display: block;
+	background-image: url('../img/video/play-dark.png');
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	@media (min-width: 768px) and (max-width: 1919px) {
+		width: remy(80);
+	   height: remy(80);
 	}
 	@media (max-width: 767px) {
 	width: 36px;
