--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,9 @@
 @use "sections/_feedback.scss";
 @use "sections/_review-section.scss";
 @use "sections/_testimonial.scss";
+@use "sections/_accordion.scss";
+@use "sections/_faq.scss";
+
 
 
 
