--- a/src/scss/sections/_our-team.scss
+++ b/src/scss/sections/_our-team.scss
@@ -159,8 +159,9 @@
 		.btn-play{
 			position: absolute;
 			right: 10px;
+			left: auto;
 			top: 50%;
-			transform: translateY(-50%);
+			transform: translate(0, -50%);
 
 		}
 		@media (min-width: 768px) and (max-width: 1919px) {
