--- a/src/scss/sections/_testimonial.scss
+++ b/src/scss/sections/_testimonial.scss
@@ -52,6 +52,10 @@
 	    padding-top: remy(32);
 		row-gap: remy(22);
 	}
+	@media (max-width: 767px) {
+		padding: 15px;
+		padding-top: 32px;
+	}
 }
 .testimonial-card__title{
 	font-family: var(--second-family);
