--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,12 +24,7 @@
 @use "sections/_accordion.scss";
 @use "sections/_faq.scss";
 
-
-
-
-
-
-// @use "sections/_footer";
+ @use "sections/_footer";
 
 
 
