--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -14,5 +14,5 @@ block content
 		include ../sections/_testimonial
 		include ../sections/_faq
 	
-	
-	//include ../sections/_footer
+	//FOOTER
+	include ../sections/_footer
