--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -1,8 +1,11 @@
 footer.footer
+	//TOP CONTENT
 	.footer-top
 		.container
+			
 			.footer-top__content.flex
-				.footer-contacts.flex-col
+				.footer-contacts.flex
+					
 					a(href="#!").logo
 						img(src='./img/footer-logo.webp', srcset='./img/footer-logo@2x.webp' width='110' height='103' loading='lazy' alt='img')
 
@@ -46,3 +49,52 @@ footer.footer
 				.footer-map
 					.map
 						iframe(src="https://yandex.ru/map-widget/v1/?um=constructor%3A13e02d731c04b56220a2a064d1fa54db38ac5402f907fd4bdf75e632a107fa8e&amp;source=constructor" width="100%" height="100%" frameborder="0")
+
+	//FOOTER NAVs
+	.footer-menus
+		.container
+			.footer-menus__content
+				//MENU LIST
+				nav.footer-nav.footer-nav--big
+					.footer-nav__title Лечение
+					ul.footer-nav__list
+						li
+							a(href="#!") Диагностика
+						li
+							a(href="#!") Терапия
+						li
+							a(href="#!") Имплантология
+						li
+							a(href="#!") Несъемное протезирование
+						li
+							a(href="#!") Эстетическая стоматология
+						li
+							a(href="#!") Отбеливание зубов
+						li
+							a(href="#!") Ортодонтия
+						li
+							a(href="#!") Хирургия
+						li
+							a(href="#!") Ортопедия
+						li
+							a(href="#!") Съемное протезирование
+						li
+							a(href="#!") Профилактика и гигиена
+				//MENU LIST
+				nav.footer-nav
+					.footer-nav__title О нас 
+					ul.footer-nav__list
+						li
+							a(href="#!") о клинике
+						li
+							a(href="#!") наши врачи 
+						li
+							a(href="#!") до / после 
+						li
+							a(href="#!") Отзывы
+						li
+							a(href="#!") блог
+						li
+							a(href="#!") контакты 
+						
+						
