--- a/src/pug/sections/_faq.pug
+++ b/src/pug/sections/_faq.pug
@@ -25,9 +25,9 @@ section.faq
 				.accordion-body
 					.accordion-body__content.flex
 						.accordion-body__video
-							a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT" data-fancybox="video-about").team-preview__video-btn.visible-desk
+							a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT" data-fancybox="video-about").video-box
 								img(src='./img/video/poster1.webp' width='566' height='317' loading='lazy' alt='img')
-								span.btn-play
+								span.btn-play-dark
 							
 						.accordion-body__text
 							.title-26 Что такое синус-лифтинг?
@@ -39,9 +39,9 @@ section.faq
 				.accordion-body
 					.accordion-body__content.flex
 						.accordion-body__video
-							a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT" data-fancybox="video-about").team-preview__video-btn.visible-desk
+							a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT" data-fancybox="video-about").video-box
 								img(src='./img/video/poster1.webp' width='566' height='317' loading='lazy' alt='img')
-								span.btn-play
+								span.btn-play-dark
 							
 						.accordion-body__text
 							.title-26 Что такое протезирование ALL-ON-4 и ALL-ON-6 ?
@@ -53,9 +53,9 @@ section.faq
 				.accordion-body
 					.accordion-body__content.flex
 						.accordion-body__video
-							a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT" data-fancybox="video-about").team-preview__video-btn.visible-desk
+							a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT" data-fancybox="video-about").video-box
 								img(src='./img/video/poster1.webp' width='566' height='317' loading='lazy' alt='img')
-								span.btn-play
+								span.btn-play-dark
 							
 						.accordion-body__text
 							.title-26 Что такое отбеливание зубов и какие бывают виды?
@@ -67,9 +67,9 @@ section.faq
 				.accordion-body
 					.accordion-body__content.flex
 						.accordion-body__video
-							a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT" data-fancybox="video-about").team-preview__video-btn.visible-desk
+							a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT" data-fancybox="video-about").video-box
 								img(src='./img/video/poster1.webp' width='566' height='317' loading='lazy' alt='img')
-								span.btn-play
+								span.btn-play-dark
 							
 						.accordion-body__text
 							.title-26 Что такое композитные виниры? 
@@ -81,9 +81,9 @@ section.faq
 				.accordion-body
 					.accordion-body__content.flex
 						.accordion-body__video
-							a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT" data-fancybox="video-about").team-preview__video-btn.visible-desk
+							a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT" data-fancybox="video-about").video-box
 								img(src='./img/video/poster1.webp' width='566' height='317' loading='lazy' alt='img')
-								span.btn-play
+								span.btn-play-dark
 							
 						.accordion-body__text
 							.title-26 Что такое периодонтит(киста зуба) ?
@@ -95,9 +95,9 @@ section.faq
 				.accordion-body
 					.accordion-body__content.flex
 						.accordion-body__video
-							a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT" data-fancybox="video-about").team-preview__video-btn.visible-desk
+							a(href="https://www.youtube.com/embed/__-vp0g_BhA?si=ATYLxRiZZo-EeydT" data-fancybox="video-about").video-box
 								img(src='./img/video/poster1.webp' width='566' height='317' loading='lazy' alt='img')
-								span.btn-play
+								span.btn-play-dark
 							
 						.accordion-body__text
 							.title-26 Что такое коронки?
