--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -97,4 +97,12 @@ footer.footer
 						li
 							a(href="#!") контакты 
 						
-						
+	//FOOTER-BOTTOM
+	.footer-bottom
+		.container
+			.footer-bottom__content.flex
+				p.copyright-txt &copy;2025 NEWLINENT
+				.politic-link
+					a(href="#!") ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ
+				.savov-link
+					a(href="#!").savov-link ДЕЗАЙН БЮРО – SAVOV
