--- a/src/scss/sections/_accordion.scss
+++ b/src/scss/sections/_accordion.scss
@@ -4,8 +4,6 @@
 .accordion-body {
 	display: none;
 	padding: 0;
-	
-	border-bottom: 1px solid #b9b1a6;
 	position: relative;
 	z-index: 2;
 	background-color: #fff;
@@ -131,4 +129,8 @@
 
 .accordion-header.open::after {
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='23' height='12' viewBox='0 0 23 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M11.6662 2.85661L1.51316 11.9978L1.16355e-07 10.669L11.6662 -9.90835e-07L23 10.669L21.4868 12L11.6662 2.85661Z' fill='%232E3033' /%3e%3c/svg%3e");
+	@media (max-width: 1364px) {
+		width: 16px;
+		height: 16px;
+	}
 }
