--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -232,3 +232,58 @@
 	}
 	
 }
+.footer-bottom{
+	padding-block: 32px;
+	border-top:1px solid white;
+	@media (max-width: 1919px) {
+		padding-block: remy(32);
+	}
+	@media (max-width: 767px) {
+		padding-block: 20px;
+	}
+}
+.politic-link a{
+	border-bottom:1px solid white;
+	width: fit-content;
+}
+.footer-bottom__content, .savov-link a,.politic-link a {
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 135%;
+	color: #fff;
+	text-transform: uppercase;
+	@media (max-width: 1919px) {
+		font-size: remy(16);
+	}
+	@media (max-width: 767px) {
+		font-size: 10px;
+	}
+}
+
+
+.footer-bottom__content{
+	justify-content: space-between;
+	@media (max-width: 767px) {
+		flex-wrap: wrap;
+		row-gap:12px;
+		.politic-link{
+			order: -1;
+			width: 100%;
+			font-size: 12px;
+			line-height: 134%;
+			width: 100%;
+		}
+		.copyright-txt{
+			width: 45%;
+			order:2;
+			font-size: 10px;
+		}
+		.savov-link{
+			width: 48%;
+			order:23;
+			font-size: 10px;
+			order:3;
+			text-align: right;
+		}
+	}
+}
