--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,8 +6,7 @@ block content
 		.start-page__cards
 			a(href="./ui/colors.html") NewLineDent
 			a(href="main.html") Главная
-			
-			
+			a(href="service-page.html") Услуги
 
 block variables
 	-var title = "Pizza Mega Magic";
