--- a/src/pug/sections/_about.pug
+++ b/src/pug/sections/_about.pug
@@ -1,6 +1,11 @@
 //Мы в цифрах
 section.about
 	.container-special
+		.left-decore-line
+			p.txt-primary 03/07
+			span.fake-line
+			p О компании 
+		
 		h2.h2.visible-sm Мы на&nbsp;сегодняшний день в цифрах
 		.about__content.flex-col
 			.about-gallery
