--- a/src/pug/sections/_faq.pug
+++ b/src/pug/sections/_faq.pug
@@ -1,6 +1,9 @@
 section.faq
 	.container-special
-		
+		.left-decore-line
+			p.txt-primary 07/07
+			span.fake-line
+			p Вопрос / ответ 
 		h2.title-36 Популярные вопросы
 		//=====video acordion====
 		.faq-acordion
