--- a/src/pug/sections/_review-section.pug
+++ b/src/pug/sections/_review-section.pug
@@ -1,6 +1,12 @@
 //REVIEW
 section.review
 	.container-special
+		
+		.left-decore-line
+			p.txt-primary 05/07
+			span.fake-line
+			p Отзывы клиентов
+		
 		.header-block
 			h2.title-36 Отзывы
 		
