--- a/src/pug/sections/_service-poppulare.pug
+++ b/src/pug/sections/_service-poppulare.pug
@@ -1,6 +1,11 @@
 //POPPULARE SERVICE
 section.poppular-service.has-absBtn
 	.container-special
+		.left-decore-line
+			p.txt-primary 01/07
+			span.fake-line
+			p наши услуги
+		
 		.header-block
 			h2.h2 Популярные услуги
 			a(href="#!").btn-primary.abs-btn
