--- a/src/pug/sections/_steps.pug
+++ b/src/pug/sections/_steps.pug
@@ -1,5 +1,11 @@
 section.steps
 	.container-special
+		
+		.left-decore-line
+			p.txt-primary 04/07
+			span.fake-line
+			p Первичный прием
+		
 		.header-block
 			h2.h2 Как пройдет наша<br>первая встреча?
 		.steps-slider.swiper
