--- a/src/pug/sections/_testimonial.pug
+++ b/src/pug/sections/_testimonial.pug
@@ -1,6 +1,12 @@
 //TESTIMONIAL
 section.testimonial.has-absBtn
 	.container-special
+		
+		.left-decore-line
+			p.txt-primary 06/07
+			span.fake-line
+			p Истории наших клиентов 
+		
 		.header-block
 			h2.h2 Улыбки наших клиентов
 			a(href="review-page.html").btn-primary.abs-btn
