--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -46,3 +46,28 @@ html(lang="ru")
 					.step__img
 						img(src='./img/steps/1.webp', srcset='./img/steps/1@2x.webp 2x' width='157' height='161' loading='lazy' alt='img')
 					.step__title
+				
+				br
+				.serv-card
+					.serv-card__top.flex
+						.serv-card__title
+							.title-26 Консультация и диагностика
+							p Хирургическое лечение и удаление зубов
+						.serv-card__img
+							img(src='./img/', srcset='./img/' width='' height='' loading='lazy' alt='img')
+					
+					
+					.accordion-group
+						.accordion-header.flex
+							p Услуги направления
+							span
+							.acc-icon
+						.accordion-body
+							a(href="").service-link
+								span Что такое отбеливание зубов и какие бывают виды?
+							a(href="").service-link
+								span Что такое отбеливание зубов и какие бывают виды?
+							a(href="").service-link
+								span Что такое отбеливание зубов и какие бывают виды?
+							a(href="").service-link
+								span Что такое отбеливание зубов и какие бывают виды?
