--- a/src/pug/sections/_our-team.pug
+++ b/src/pug/sections/_our-team.pug
@@ -1,6 +1,11 @@
 //TEAM
 section.team
 	.container-special
+		.left-decore-line
+			p.txt-primary 02/07
+			span.fake-line
+			p наши врачи
+		
 		.header-block
 			h2.h2 Для вас работают опытные профессионалы
 			a(href="#!").btn-primary.hide-sm 
