--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -16,7 +16,7 @@ header.header
 					//MENU
 					ul.header-menu.flex
 						li
-							a(href="#!") Услуги и цены
+							a(href="service-page.html") Услуги и цены
 						li
 							a(href="#!") до / после
 						li
