--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -54,7 +54,7 @@ html(lang="ru")
 							.title-26 Консультация и диагностика
 							p Хирургическое лечение и удаление зубов
 						.serv-card__img
-							img(src='./img/', srcset='./img/' width='' height='' loading='lazy' alt='img')
+							img(src='./img/service/serv1.svg' width='101' height='105' loading='lazy' alt='img')
 					
 					
 					.accordion-group
