--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -275,6 +275,9 @@ section{
 		display: flex!important;
 		}
 }
+.pt-20 {
+	padding-top: 20px;
+}
 .left-decore-line{
 	position: absolute;
 	top: 0;
