--- a/src/scss/base/_breadcrumbs.scss
+++ b/src/scss/base/_breadcrumbs.scss
@@ -1,5 +1,9 @@
 @use "base/var" as *;
-.breadcrumbs-wrapper{}
+.breadcrumbs-wrapper{
+	@media (max-width: 767px) {
+	display: none;
+	}
+}
 .breadcrumbs{
 	li{
 		display: inline-block;
@@ -16,6 +20,7 @@
 			right: 0;
 			top: 50%;
 			transform: translateY(-50%);
+
 		}
 	}
 	a{
@@ -36,4 +41,5 @@
 			display: none;
 		}
 	}
+	
 }
