--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,6 +7,8 @@ block content
 			a(href="./ui/colors.html") NewLineDent
 			a(href="main.html") Главная
 			a(href="service-page.html") Услуги
+			a(href="main.html") Главная
+			a(href="review.html") Отзывы
 
 block variables
 	-var title = "Pizza Mega Magic";
