--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -22,7 +22,7 @@ header.header
 						li
 							a(href="#!") наши врачи
 						li
-							a(href="#!") Отзывы 
+							a(href="review.html") Отзывы 
 						li
 							a(href="#!") о нас
 						li
