--- a/src/pug/sections/_testimonial.pug
+++ b/src/pug/sections/_testimonial.pug
@@ -9,7 +9,7 @@ section.testimonial.has-absBtn
 		
 		.header-block
 			h2.h2 Улыбки наших клиентов
-			a(href="review-page.html").btn-primary.abs-btn
+			a(href="review.html").btn-primary.abs-btn
 				span Еще больше улыбок
 				svg.svg-rarr
 					use(href='../img/sprite.svg#svg-rarr')
