--- a/src/pug/sections/_testimonial.pug
+++ b/src/pug/sections/_testimonial.pug
@@ -16,7 +16,7 @@ section.testimonial.has-absBtn
 		
 		.testimonial-slider.swiper
 			.swiper-wrapper
-				.swiper-slide
+				.swiper-slide.testimonial-box
 					.testimonial-card
 						.testimonial-card__img
 							img(src='./img/review/rev1.webp', srcset='./img/review/rev1@2x.webp 2x' width='455' height='314' loading='lazy' alt='img')
@@ -35,8 +35,8 @@ section.testimonial.has-absBtn
 								span.rating-star
 								span.rating-star.rating-star.disable
 				
-				.swiper-slide
-					.testimonial-card.testimonial-card--reverse
+				.swiper-slide.testimonial-box
+					.testimonial-card
 						.testimonial-card__img
 							img(src='./img/review/rev2.webp', srcset='./img/review/rev2@2x.webp 2x' width='455' height='314' loading='lazy' alt='img')
 						.testimonial-card__body
@@ -54,7 +54,7 @@ section.testimonial.has-absBtn
 								span.rating-star
 								span.rating-star.rating-star.disable
 
-				.swiper-slide
+				.swiper-slide.testimonial-box
 					.testimonial-card
 						.testimonial-card__img
 							img(src='./img/review/rev3.webp', srcset='./img/review/rev3@2x.webp 2x' width='455' height='314' loading='lazy' alt='img')
