fix-review-page

--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -43,7 +43,7 @@ footer.footer
 							img(src="./img/social/fb.svg", width="32" height="32" alt="img")
 
 					.footer-btn
-						button.btn(type="button") Записаться на консультацию
+						button.btn.sm-100(type="button") Записаться на консультацию
 
 				//MAP
 				.footer-map
