--- a/src/pug/sections/review-page/_review-page-content.pug
+++ b/src/pug/sections/review-page/_review-page-content.pug
@@ -124,4 +124,4 @@ section.testimonial.pb-110
 							span.rating-star.rating-star.disable
 
 		.visible-sm.show-more.btn
-			button.btn-primary(type="button") Показать больше 
+			button.btn-primary.sm-100(type="button") Показать больше 
