--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -2,13 +2,14 @@ extends ../layouts/layout.pug
 
 block content
 	.start-page(style="background: white;")
-		h1 Pizza Mega Magic
+		h1 NewLineDent
 		.start-page__cards
-			a(href="./ui/colors.html") NewLineDent
+			a(href="./ui/colors.html") UI
 			a(href="main.html") Главная
 			a(href="service-page.html") Услуги
 			a(href="main.html") Главная
 			a(href="review.html") Отзывы
+			a(href="about.html") О компании
 
 block variables
 	-var title = "Pizza Mega Magic";
