--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -33,6 +33,11 @@
 		height: remy(43);
 	}
 }
+.header-nav-logo .svg-logo{
+	color: #2E3033;
+	width: 163px;
+	height: 25px;
+}
 .svg-metro{
 	width: 28px;
 	height: 23px;
