--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -1,7 +1,7 @@
 extends ../layouts/layout.pug
 
 block content
-	include ../sections/_header
+	include ../sections/_header-main-page
 	main.main
 		include ../sections/_promo.pug
 		include ../sections/_service-poppulare.pug
