--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -24,7 +24,7 @@ header.header
 						li
 							a(href="review.html") Отзывы 
 						li
-							a(href="#!") о нас
+							a(href="about.html") о нас
 						li
 							a(href="#!") Контакты
 						
