--- a/src/pug/sections/page-about/_promo.pug
+++ b/src/pug/sections/page-about/_promo.pug
@@ -1,4 +1,6 @@
-.promo
+.promo.promo-inner
+	.promo-bg-image.hide-sm(style="background-image: url(./img/about/about-big.webp) ")
+	.promo-bg-image.visible-sm(style="background-image: url(./img/about/about-big.webp) ")
 	.promo-top
 		.container.pl-110
 			.left-decore-line
